--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>California Teachers Study</title>
-    <link rel="stylesheet" href="/normalize.min.css">
-    <link rel="stylesheet" href="/css/all.css">
+    <!-- link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" -->
+    <!-- link rel="stylesheet" href="//use.fontawesome.com/releases/v5.6.3/css/all.css" -->
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <!-- link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" / -->
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
   <body>
